compiler/tests/fixtures/invalid/syntax/syntax_error.viv
// Invalid: Missing colon after action name

action broken
    roles:
        @x:
            as: initiator
